--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -11,8 +11,8 @@ main:after{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: linear-gradient(90deg, rgba(0,0,0,1) 15%, rgba(255,255,255,0.5816526439677434) 50%, rgba(0,0,0,0.8) 85%);
-    z-index: -1;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0.05926120448179273) 50%, rgba(0, 0, 0, 1) 90%);
+	z-index: -1;
 }
 
 .conteudo{
